[gd_scene load_steps=29 format=3 uid="uid://dp864vjgdjpn0"]

[ext_resource type="Script" path="res://scene/game_object/player/player.gd" id="1_hymy4"]
[ext_resource type="PackedScene" uid="uid://bp5ah440ddf33" path="res://scene/component/velocity_component.tscn" id="1_yc6bf"]
[ext_resource type="Texture2D" uid="uid://cnbadeus6vfm7" path="res://mort.png" id="2_bnped"]
[ext_resource type="PackedScene" uid="uid://btl6trxts6o7k" path="res://scene/component/health_component.tscn" id="3_ct2db"]
[ext_resource type="PackedScene" uid="uid://ccnugxuwre3ow" path="res://scene/component/state_machine.tscn" id="4_ls32u"]
[ext_resource type="Script" path="res://scene/game_object/player/player_states/player_idle.gd" id="5_qnqg5"]
[ext_resource type="Script" path="res://scene/game_object/player/player_states/player_moving.gd" id="6_cqboq"]
[ext_resource type="Script" path="res://scene/game_object/player/player_states/player_jumping.gd" id="7_7cj8h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1xpr4"]
atlas = ExtResource("2_bnped")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hcws"]
atlas = ExtResource("2_bnped")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2yu7"]
atlas = ExtResource("2_bnped")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ohew"]
atlas = ExtResource("2_bnped")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ii12"]
atlas = ExtResource("2_bnped")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwmp0"]
atlas = ExtResource("2_bnped")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhmkf"]
atlas = ExtResource("2_bnped")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5kra"]
atlas = ExtResource("2_bnped")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pk25"]
atlas = ExtResource("2_bnped")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss7o6"]
atlas = ExtResource("2_bnped")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_63tsh"]
atlas = ExtResource("2_bnped")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oxe5"]
atlas = ExtResource("2_bnped")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3tis"]
atlas = ExtResource("2_bnped")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqq0b"]
atlas = ExtResource("2_bnped")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_21b61"]
atlas = ExtResource("2_bnped")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tmgo"]
atlas = ExtResource("2_bnped")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_flgdf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xpr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hcws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2yu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ohew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ii12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwmp0")
}],
"loop": true,
"name": &"duck",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhmkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5kra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pk25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss7o6")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63tsh")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oxe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3tis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqq0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21b61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tmgo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mnkg"]
size = Vector2(7.01163, 18.019)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7fp8"]
size = Vector2(7.10293, 17.6173)

[sub_resource type="CircleShape2D" id="CircleShape2D_up6t8"]
radius = 165.501

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
script = ExtResource("1_hymy4")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_yc6bf")]
max_speed = 500
acceleration = 100.0
player = NodePath("..")
player_jump_velocity = 500.0

[node name="HealthComponent" parent="." instance=ExtResource("3_ct2db")]

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("4_ls32u")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_qnqg5")
player = NodePath("../..")

[node name="Moving" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_cqboq")
player = NodePath("../..")

[node name="Jumping" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_7cj8h")
player = NodePath("../..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_flgdf")
animation = &"run"
autoplay = "idle"

[node name="HurtBox" type="Area2D" parent="."]
z_index = 2
collision_layer = 8
collision_mask = 8

[node name="HurtBoxCollision" type="CollisionShape2D" parent="HurtBox"]
unique_name_in_owner = true
position = Vector2(1.5, 0.5)
scale = Vector2(2.1393, 0.943446)
shape = SubResource("RectangleShape2D_3mnkg")

[node name="TerrainCollider" type="CollisionShape2D" parent="."]
position = Vector2(0.499995, 0.5)
scale = Vector2(0.985507, 0.96496)
shape = SubResource("RectangleShape2D_h7fp8")

[node name="TackleFlag" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 0

[node name="EnemyCollider" type="CollisionShape2D" parent="TackleFlag"]
position = Vector2(6.5, 0.5)
shape = SubResource("CircleShape2D_up6t8")
